vlib/v/checker/tests/mod_name_duplicate_const_err.out
vlib/v/checker/tests/mod_name_duplicate_const_err.vv:3:7: notice: duplicate of a module name `foo.foo`
    1 | module foo
    2 | 
    3 | const foo = 'bar'
      |       ~~~
Details: Module name duplicates, will be an error after 2023/10/31.
vlib/v/checker/tests/mod_name_duplicate_const_err.vv:1:1: error: project must include a `main` module or be a shared library (compile with `v -shared`)
    1 | module foo
      | ^
    2 | 
    3 | const foo = 'bar'